add resturant page

--- a/src/translation/ar.json
+++ b/src/translation/ar.json
@@ -3,7 +3,7 @@
     "Resturants":"المطاعم",
     "Welcome to React": "اهلا وسهلا شرفتو ",
     "Home":"الرئيسيه",
-    "About":"عننا",
+    "Products":"المنتجات",
     "LogOut":"تسجيل الخروج",
     "Dashboard":"وحده التحكم"
     
